syntax = "proto3";

package product;

service Products {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
    rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse);
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    double price = 5;
    int32 stock = 6;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    string category = 3;
    double price = 4;
    int32 stock = 5;
}

message CreateProductResponse {
    Product product = 1;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    double price = 5;
    int32 stock = 6;
}

message UpdateProductResponse {
    Product product = 1;
}

message DeleteProductRequest {
    string id = 1;
}

message DeleteProductResponse {
    bool success = 1;
}

message SearchProductsRequest {
    string query = 1;
    int32 page = 2;
    int32 size = 3;
}

message SearchProductsResponse {
    repeated Product products = 1;
    int32 total = 2;
}